--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-portfolio",
+  "homepage": "https://giovannaruggio.github.io/react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,6 +10,7 @@
     "axios": "^0.26.0",
     "bootstrap": "^5.1.3",
     "dotenv": "^16.0.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
@@ -16,6 +18,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
